Added missing integration tests